Optimisation and Mobile Display Fixes
Optimised image sizes as best as possible without too much loss of quality. Minor changes to test to fix the display issues on mobile devices.

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
   footer {
     background-color: #1B262C;
     color: white;
-    padding: 15px;
+    padding: 10px;
     text-align: center;
   }
   
@@ -237,8 +237,6 @@ height: 94%;
 #Hiscores{
   padding-top: 84px;
   padding-bottom: 84px;
-  padding-left: 60px;
-  padding-right: 60px;
   text-align: center;
   vertical-align: middle;
   color: white;
@@ -257,8 +255,8 @@ height: 94%;
 .carousel-control-prev-icon,
 .carousel-control-next-icon
 {
-  width: 30px;
-  height: 30px;
+  max-width: auto;
+  height: 50px;
 }
 
 
@@ -266,12 +264,12 @@ height: 94%;
 #cta{
   position: relative;
   z-index: 1;
-  padding-top: 250px;
-  padding-bottom: 250px;
+  padding-top: 255px;
+  padding-bottom: 255px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.3),
   rgba(0, 0, 0, 0.3)),url("images/space-helmet.jpg");
   background-size: cover;
-  background-position: -2rem 0rem;
+  background-position: -1rem 0rem;
   
 }
 @media (max-width: 992px){
@@ -279,9 +277,7 @@ height: 94%;
     background-position: center center;
   }
 }
-.cta-content{
 
-}
 
 
 /*---Development Page---*/
